crates/sutura-app/tests/snapshots/revenue-north-only__sql@duckdb.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT "orders"."channel" AS "channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) AS "period", SUM("orders"."amount_cents") AS "revenue" FROM "orders" LEFT JOIN "customers" ON "orders"."customer_id" = "customers"."id" WHERE "orders"."order_date" >= ? AND "orders"."order_date" < ? AND "customers"."region_code" = ? GROUP BY "orders"."channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) ORDER BY "orders"."channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) LIMIT 10001
